--- a/web/statics/scss/backup-flow-scss/_general.scss
+++ b/web/statics/scss/backup-flow-scss/_general.scss
@@ -87,7 +87,6 @@ main {
 .backup-main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     flex-grow: 1;
     padding: 16px;
